chore(httpie): ansible-lint warnings

--- a/roles/httpie/tasks/main.yml
+++ b/roles/httpie/tasks/main.yml
@@ -25,7 +25,7 @@
     executable: pip3
     extra_args: --upgrade
     umask: "0022"
-    state: present
+    state: latest
   when: httpie_version is failed or httpie_version.stdout != version
   tags:
     - utils
