--- a/roles/kubectl/tasks/main.yml
+++ b/roles/kubectl/tasks/main.yml
@@ -26,7 +26,7 @@
   ansible.builtin.apt:
     name:
       - kubectl
-    state: present
+    state: latest
   tags:
     - kubernetes
     - kubectl
