--- a/roles/skaffold/tasks/main.yml
+++ b/roles/skaffold/tasks/main.yml
@@ -1,19 +1,20 @@
 ---
-- name: "kubernetes | skaffold :: download"
-  get_url:
+- name: "Kubernetes | skaffold :: download"
+  ansible.builtin.get_url:
     url: https://github.com/{{ repo }}/releases/download/v{{ version }}/skaffold-{{ platform }}
     dest: /usr/local/bin/skaffold
     sha256sum: "{{ checksum }}"
+    mode: 0644
   tags:
-  - kubernetes
-  - skaffold
+    - kubernetes
+    - skaffold
 
-- name: "kubernetes | kubectx :: permission"
-  file:
+- name: "Kubernetes | kubectx :: permission"
+  ansible.builtin.file:
     path: /usr/local/bin/skaffold
     owner: root
     group: root
-    mode: '0755'
+    mode: 0755
   tags:
-  - kubernetes
-  - skaffold
+    - kubernetes
+    - skaffold
