--- a/roles/spotify/vars/main.yml
+++ b/roles/spotify/vars/main.yml
@@ -1,5 +1,7 @@
+# Latest key to use available on
+# https://www.spotify.com/uk/download/linux/
 apt:
-  key: https://download.spotify.com/debian/pubkey_5E3C45D7B312C643.gpg
+  key: https://download.spotify.com/debian/pubkey_7A3A762FAFD4A51F.gpg
   name: spotify
   url: http://repository.spotify.com
   suite: stable
