--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -1,64 +1,59 @@
 ---
-- name: "special | Transmission :: folders"
-  file:
+- name: "Special | Transmission :: folders"
+  ansible.builtin.file:
     path: "{{ homedir }}/{{ item }}"
     state: directory
     owner: "{{ userid }}"
     group: "{{ groupid }}"
     mode: 0700
   with_items:
-  - "Downloads"
-  - "Downloads/000 A Traiter 000"
-  - "Downloads/.transmission.work"
-  - ".config/transmission"
-  when: wsl == "0"
+    - "Downloads"
+    - "Downloads/000 A Traiter 000"
+    - "Downloads/.transmission.work"
+    - ".config/transmission"
   tags:
-  - never
-  - special
-  - transmission
+    - never
+    - special
+    - transmission
 
-- name: "special | Transmission :: installation"
-  apt:
+- name: "Special | Transmission :: installation"
+  ansible.builtin.apt:
     name: transmission-gtk
-    state: present
-  when: wsl == "0"
+    state: latest
   tags:
-  - never
-  - special
-  - transmission
+    - never
+    - special
+    - transmission
 
-- name: "special | Transmission :: settings"
-  template:
+- name: "Special | Transmission :: settings"
+  ansible.builtin.template:
     src: home/.config/transmission/settings.json.j2
     dest: "{{ homedir }}/.config/transmission/settings.json"
     mode: 0644
   tags:
-  - never
-  - special
-  - transmission
+    - never
+    - special
+    - transmission
 
-- name: "special | Transmission :: favorite"
-  block:
-
-  - name: "special | Transmission :: favorite [1/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      state: read
-    become: true
-    become_user: "{{ username }}"
-    register: favorites
-    changed_when: false
-
-  - name: "special | Transmission :: favorite [2/2]"
-    dconf:
-      key: /org/gnome/shell/favorite-apps
-      value: "{{ favorites.value | list_append('transmission-gtk.desktop') }}"
-    become: true
-    become_user: "{{ username }}"
-    changed_when: false
-
-  when: wsl == "0"
+- name: "Special | Transmission :: favorite"
   tags:
-  - never
-  - special
-  - transmission
+    - never
+    - special
+    - transmission
+  block:
+    - name: "Special | Transmission :: favorite [1/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        state: read
+      become: true
+      become_user: "{{ username }}"
+      register: favorites
+      changed_when: false
+
+    - name: "Special | Transmission :: favorite [2/2]"
+      community.general.dconf:
+        key: /org/gnome/shell/favorite-apps
+        value: "{{ favorites.value | list_append('transmission-gtk.desktop') }}"
+      become: true
+      become_user: "{{ username }}"
+      changed_when: false
