chore(fonts): ansible-lint warnings

--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Fonts | Ubuntu Mono :: installation"
   ansible.builtin.apt:
     name: ubuntu-mono
-    state: present
+    state: latest
   tags:
     - fonts
     - ubuntu-mono
