chore(flameshot): ansible-lint warnings

--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Special | Flameshot :: installation"
   ansible.builtin.apt:
     name: flameshot
-    state: present
+    state: latest
   tags:
     - never
     - special
